--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier"
   ],
   "dependencies": {
+    "aws-sdk": "^2.820.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
