--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "aws-sdk": "^2.820.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
